--- a/src/de/oszimt/ls/aliendefence/view/menue/LevelChoice.form
+++ b/src/de/oszimt/ls/aliendefence/view/menue/LevelChoice.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="de.oszimt.ls.aliendefence.view.menue.LevelChoice">
   <grid id="27dc6" binding="panel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="501" height="400"/>
+      <xy x="20" y="20" width="644" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -12,6 +12,12 @@
         <properties/>
         <border type="none"/>
         <children>
+          <component id="3f678" class="javax.swing.JButton" binding="btnShowHighscore">
+            <constraints/>
+            <properties>
+              <text value="Highscore anzeigen"/>
+            </properties>
+          </component>
           <component id="47d36" class="javax.swing.JButton" binding="btnSpielen">
             <constraints/>
             <properties>
